fixed white space rendering

--- a/src/styles/wysiwyg.css
+++ b/src/styles/wysiwyg.css
@@ -1,13 +1,15 @@
 #previewRenderer table {
-    padding-bottom: 5px;
+    padding-bottom: 0px;
+
 }
 #previewRenderer table.draw-lines {
     border: 1px solid black;
 }
 #previewRenderer td.draw-lines {
-    border-left: 1px solid black;
     border-right: 1px solid black;
+    border-left: 1px solid black;
 }
-#previewRenderer table td {
-    padding-left: 3px;
+#previewRenderer td {
+    width: 200px;  
+
 }
